--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div id="mushroom-cup" class="accordion-collapse collapse" data-bs-parent="#cup-list">
                 <div class="accordion-body">
                   <ul>
-                    <li>Mario Kart Stadium</li>
+                    <li><a role="button" href="#" data-bs-toggle="offcanvas" data-bs-target="#mario-kart-stadium" aria-controls="mario-kart-stadium">Mario Kart Stadium</a></li>
                     <li>Water Park</li>
                     <li>Sweet Sweet Canyon</li>
                     <li>Thwomp Ruins</li>
@@ -444,8 +444,19 @@
         </div>
 
         <div class="col">
-          <!-- EMPTY-->
-          D
+          <!-- Mario Kart Stadium -->
+
+          <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="mario-kart-stadium" aria-labelledby="mario-kart-stadium-label">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="mario-kart-stadium-label">Mario Kart Stadium <code>mks</code></h5>
+              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <p>Mario Kart Stadium</p>
+            </div>
+          </div>
+          
+
         </div>
 
       </div>
