--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MK Tracks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link href="css/css.css">
+    <link rel="stylesheet" href="css/css.css">
   </head>
   <body class="bg-dark text-white">
     <div class="container-fluid p-0">
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col">
           
-          <div class="accordion" id="cup-list">
+          <div class="accordion" id="cup-list" data-bs-theme="dark">
 
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -446,7 +446,7 @@
         <div class="col">
           <!-- Mario Kart Stadium -->
 
-          <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="mario-kart-stadium" aria-labelledby="mario-kart-stadium-label">
+          <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="mario-kart-stadium" aria-labelledby="mario-kart-stadium-label" data-bs-theme="dark">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title" id="mario-kart-stadium-label">Mario Kart Stadium <code>mks</code></h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
