Accordion and Off canvas mark up with data set

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
         </div>
 
-        <div class="col">
+        <div class="col" id="track-content">
           <!-- Mario Kart Stadium -->
 
-          <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="mario-kart-stadium" aria-labelledby="mario-kart-stadium-label" data-bs-theme="dark">
+          <!-- <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="mario-kart-stadium" aria-labelledby="mario-kart-stadium-label" data-bs-theme="dark">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title" id="mario-kart-stadium-label">Mario Kart Stadium <code>mks</code></h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -62,7 +62,7 @@
             <div class="offcanvas-body">
               <p>Mario Kart Stadium</p>
             </div>
-          </div>
+          </div> -->
           
 
         </div>
