--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <h1><a class="navbar-brand" href="#">MK Tracks</a></h1>
+          <a class="gh-link" href="https://github.com/im-caelli/mk-tracks">About</a>
         </div>
       </nav>
     </div>
@@ -21,7 +22,7 @@
 
     <div class="container my-5">
       <div class="row">
-        <div class="col-12 col-lg-9">
+        <div class="col-12 col-lg-8">
           
           <div class="accordion" id="cup-list" data-bs-theme="dark">
             <!-- Cup and Track List-->
@@ -29,7 +30,7 @@
 
         </div>
 
-        <div class="col-12 col-lg-3" id="track-content">
+        <div class="col-12 col-lg-4" id="track-content">
           <!-- Track Content -->
         </div>
 
